--- a/app/home/style.css
+++ b/app/home/style.css
@@ -1,5 +1,8 @@
-.btn{
-    position: relative;
+.btn {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 5px;
     background-color: #09253B;
     width: 5vw;
@@ -7,18 +10,20 @@
     text-align: center;
     color: wheat;
     font-size: 3rem;
-    left: 75vw;
-    top:45vh;
+    left: 90vw;
+    top: 90vh;
     right: 5px;
 }
 
-.btn:hover{
+.btn:hover {
     color: #09253B;
-    background-color:wheat ;
+    background-color: wheat;
     cursor: pointer;
 }
 
-.adding-ann{
+.adding-ann {
+    position: relative;
+    left: 10vw;
     display: flex;
     flex-direction: column;
     width: 50vw;
@@ -29,7 +34,7 @@
     padding: 10px;
 }
 
-.adding-ann>input[type="text"]{
+.adding-ann>input[type="text"] {
     outline: none;
     margin: 5px;
     border: 1px solid wheat;
@@ -39,7 +44,7 @@
     color: wheat;
 }
 
-.adding-ann>textarea{
+.adding-ann>textarea {
     height: 25vh;
     width: 40vw;
     background-color: #09253B;
@@ -49,14 +54,14 @@
     border: 1px solid wheat;
 }
 
-.adding-ann> button{
+.adding-ann>button {
     color: #09253B;
     width: 40vw;
     height: 2.75vh;
     margin-top: 10px;
 }
 
-.select-img{
+.select-img {
     width: 40vw;
     height: 40vh;
     border: 3px wheat dashed;
@@ -73,26 +78,158 @@
     cursor: pointer;
 }
 
-.adding-ann > button {
+.adding-ann>button {
     color: #09253B;
     background-color: wheat;
 }
-.adding-ann > button:hover {
+
+.adding-ann>button:hover {
     background-color: rgb(163, 135, 84);
     cursor: pointer;
 }
 
-.img-ann{
+.img-ann {
     width: 100%;
     height: 100%;
 }
 
-.exit-add{
+.exit-add {
     color: wheat;
     font-size: 2rem;
 }
 
-.exit-add:hover{
+.exit-add:hover {
     color: rgb(148, 130, 97);
     cursor: pointer;
+}
+
+.nav {
+    background-color: #09253B;
+    display: flex;
+    flex-direction: column;
+    color: wheat;
+    height: 100vh;
+    width: 20vw;
+}
+
+.nav>div {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.nav>div:hover {
+    background-color: wheat;
+    color: #09253B;
+    cursor: pointer;
+}
+
+.main {
+    display: flex;
+}
+
+
+.annonce-item {
+    width: 65vw;
+    border: wheat 5px solid;
+    height: fit-content;
+    font-size: 0.75rem;
+    margin: 10px;
+
+}
+
+.annonce-item>h1 {
+    word-wrap: break-word;
+    padding: 2px;
+    border-bottom: 5px solid wheat;
+    height: fit-content;
+    width: 100%;
+    text-align: center;
+}
+
+.annonce-item>p {
+    padding: 2px;
+    font-size: 1rem;
+
+}
+
+.ann-img {
+    max-height: 50vh;
+    object-fit: fill;
+    width: 100%;
+}
+
+.anns {
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    height: 100vh
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.anns::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.anns {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+
+@media only screen and (max-width: 900px) {
+    .nav {
+        display: flex;
+        flex-direction: row;
+        width: 100vw;
+        height: 10vh;
+        justify-content: space-around;
+    }
+
+    .nav>div {
+        width: 100%;
+    }
+
+    .btn {
+        position: fixed;
+        border-radius: 5px;
+        background-color: #09253B;
+        width: 11vw;
+        height: 6vh;
+        font-size: 1.5rem;
+        left: 88vw;
+        top: 93vh;
+        right: 5px;
+    }
+
+    .btn:focus {
+        color: #09253B;
+        background-color: wheat;
+        cursor: pointer;
+    }
+
+    .adding-ann {
+        display: flex;
+        flex-direction: column;
+        width: 70vw;
+        background-color: #09253B;
+        justify-content: center;
+        align-items: center;
+        height: fit-content;
+        padding: 10px;
+    }
+
+    .select-img,
+    .adding-ann>input[type="text"],
+    .adding-ann>textarea,
+    .adding-ann>button {
+        width: 60vw;
+    }
+
+    .annonce-item {
+        width: 85vw;
+    }
 }
