--- a/app/home/style.css
+++ b/app/home/style.css
@@ -325,6 +325,7 @@
     height: 40vh;
     border: 3px solid wheat;
     display: flex;
+    flex-direction: column-reverse;
     align-items: center;
     justify-content: space-around;
 }
@@ -459,4 +460,17 @@
         align-items: center;
         font-size: 0.70rem;
     }
+}
+
+
+.text{
+    border: 2px solid black;
+    width: fit-content;
+    width: 100%;
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
 }
