--- a/app/home/style.css
+++ b/app/home/style.css
@@ -400,8 +400,10 @@
         margin-left: 10px;
     }
 
-    .nav>div {
-        width: 100%;
+    .sep{
+        display: none;
+        width: 0;
+        height: 0;
     }
 
     .btn {
@@ -461,9 +463,7 @@
         font-size: 0.70rem;
     }
 
-    .sep{
-        display: none;
-    }
+  
 }
 
 
