--- a/app/home/style.css
+++ b/app/home/style.css
@@ -120,7 +120,7 @@
     justify-content: space-evenly;
 }
 
-.nav>div:hover {
+.btns-nav:hover {
     background-color: wheat;
     color: #09253B;
     cursor: pointer;
@@ -405,6 +405,9 @@
         width: 0;
         height: 0;
     }
+
+
+
 
     .btn {
         position: fixed;
