--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
 body{
-  background-color: #6D899E;
+  background-color: burlywood;
   margin: 0;
   height: 100vh;
 }
@@ -153,6 +153,7 @@ button{
 .logos{
   display: flex;
   justify-content: space-around;
+  padding-bottom: 10vh;
 }
 
 .ensa_image{
