--- a/app/globals.css
+++ b/app/globals.css
@@ -135,7 +135,7 @@ button {
 
 
 .logos {
-  position: fixed;
+  position: absolute;
   width: 30%;
   display: flex;
   justify-content: space-between;
@@ -181,11 +181,23 @@ button {
     height: 7vh;
   }
 
+  .contact{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    width:80vw;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius:15px ;
+    justify-content: space-around;
+  }
+  
+  
+
 }
 
 footer{
-  width: 100vw;
-  background-color: white;
+  width: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -209,7 +221,7 @@ footer{
   background-color: white;
   display: flex;
   justify-content: center;
-  width: 40vw;
+  width:25vw;
   padding: 20px;
   border: 1px solid black;
   border-radius:15px ;
@@ -217,6 +229,6 @@ footer{
 }
 
 .email{
-  color: var(--b-color);
+  color: rgb(0, 110, 255);
   text-shadow: 0 0 1px black;
 }
