--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
 body {
-  background-color: burlywood;
+  background-color: rgb(255, 235, 209);
   margin: 0;
   height: 100vh;
 }
