--- a/app/home/style.css
+++ b/app/home/style.css
@@ -10,7 +10,7 @@
     width: 5vw;
     height: 6vh;
     text-align: center;
-    color: wheat;
+    color: rgb(231, 194, 124);
     font-size: 3rem;
     left: 90vw;
     top: 90vh;
