--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
 body {
-  background-color: rgb(255, 235, 209);
+  background-color:#09253B ;
   margin: 0;
   height: 100vh;
 }
-
+#b3864b
 main {
   display: flex;
   justify-self: right;
