--- a/app/home/style.css
+++ b/app/home/style.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    background-color: #09253B;
+    background-color:  #b3864b;
     width: 5vw;
     height: 6vh;
     text-align: center;
